--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "core-js": "^2.6.5",
+    "popper.js": "^1.15.0",
     "svg-sprite-loader": "^4.1.3",
     "vue": "^2.6.9",
     "vue-class-component": "^7.0.1",
+    "vue-directive-tooltip": "^1.6.2",
     "vue-property-decorator": "^8.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^5.0.3",
-    "@storybook/addon-links": "^5.0.3",
+    "@storybook/addon-actions": "^5.1.5",
+    "@storybook/addon-links": "^5.1.5",
     "@storybook/vue": "latest",
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.6",
