--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "build-bundle": "vue-cli-service build --target lib --name protocall-ui-components ./src/components/index.js",
+    "build-bundle": "vue-cli-service build --target lib --name protocall-ui-components ./src/components/index.ts",
     "storybook:build": "vue-cli-service storybook:build",
     "storybook:serve": "vue-cli-service storybook:serve -p 6006",
     "test:unit": "vue-cli-service test:unit"
   },
+  "main": "dist/protocall-ui-components.common.js",
   "dependencies": {
     "core-js": "^2.6.5",
     "popper.js": "^1.15.0",
